<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>no.nav.foreldrepenger.autotest.dokumentgenerator</groupId>
    <artifactId>dokumentgenerator</artifactId>
    <packaging>pom</packaging>
    <name>Dokumentgenerator :: Root</name>
    <version>${revision}${sha1}${changelist}</version>
    <url>https://github.com/navikt/autotest-dokumentgenerator</url>

    <modules>
        <module>foreldrepengesoknad</module>
        <module>inntektsmelding</module>
    </modules>

    <properties>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.organization>navit</sonar.organization>
        <sonar.projectKey>navikt_autotest-dokumentgenerator</sonar.projectKey>
        <revision>1.0</revision>
        <sha1></sha1>
        <changelist>-SNAPSHOT</changelist>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <java.version>17</java.version>
        <felles.versjon>4.1.12</felles.versjon>
        <mottak-felles.version>0.3.7</mottak-felles.version>
    </properties>

    <organization>
        <name>no.nav</name>
        <url>https://github.com/navikt</url>
    </organization>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <organization>NAV (Arbeids- og velferdsdirektoratet) - The Norwegian Labour and Welfare Administration
            </organization>
            <organizationUrl>https://www.nav.no</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/navikt/autotest-dokumentgenerator.git</connection>
        <developerConnection>scm:git:https://github.com/navikt/autotest-dokumentgenerator.git</developerConnection>
        <url>https://github.com/navikt/autotest-dokumentgenerator/</url>
        <tag>HEAD</tag>
    </scm>

    <dependencyManagement>
        <dependencies>
            <!-- Interne avhengigheter -->
            <dependency>
                <groupId>no.nav.foreldrepenger</groupId>
                <artifactId>fpsoknad-felles</artifactId>
                <version>${mottak-felles.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger</groupId>
                <artifactId>fpsoknad-felles</artifactId>
                <version>${mottak-felles.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger</groupId>
                <artifactId>fpsoknad-felles</artifactId>
                <version>${mottak-felles.version}</version>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.autotest.dokumentgenerator</groupId>
                <artifactId>foreldrepengesoknad</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>no.nav.foreldrepenger.autotest.dokumentgenerator</groupId>
                <artifactId>inntektsmelding</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>no.nav.foreldrepenger.felles</groupId>
            <artifactId>felles-mapper</artifactId>
            <version>${felles.versjon}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.21.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.7</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>UTF-8</encoding>
                        <release>${java.version}</release>
                        <compilerArgs>
                            <arg>-parameters</arg>
                            <arg>--enable-preview</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>1.2.7</version>
                </plugin>
                <plugin>
                    <groupId>org.projectlombok</groupId>
                    <artifactId>lombok-maven-plugin</artifactId>
                    <version>1.18.20.0</version>
                    <executions>
                        <execution>
                            <phase>generate-sources</phase>
                            <goals>
                                <goal>delombok</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <configuration>
                    <flattenMode>bom</flattenMode>
                    <flattenedPomFilename>.flattened</flattenedPomFilename>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub navikt Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/navikt/autotest-dokumentgenerator</url>
        </repository>
    </distributionManagement>
</project>
